# xepher

./: .depend  .dir-locals.el  .gitignore  .travis.yml  AGENTS.md  CMakeLists.txt  CMakePresets.json  DOAP.xml  NOTES.md  README.md  README.org  TODO.md  account.cpp  account.hh  buffer.cpp  channel.cpp  channel.hh  color.cpp  color.hh  command.cpp  config.cpp  connection.cpp  connection.hh  depend.mk  index.html  install-deps.sh  install.mk  libstrophe_0.13.0-1build2.debian.tar.xz  libstrophe_0.13.0-1build2.dsc  libstrophe_0.13.0.orig.tar.xz  libstrophe_0.13.0.orig.tar.xz.asc  makefile  omemo.cpp  omemo.hh  pgp.cpp  plugin.cpp  plugin.hh  release.sh  test.mk  user.cpp  (+3 more)
.github/: FUNDING.yml  copilot-instructions.md
.github/workflows/: packages.yml
cmake/: Dependencies.cmake  LibDiff.cmake  Sexp.cmake  Tests.cmake  XepherFlags.cmake  embed_source.cmake
config/: account.hh
docs/: cpp-modernization.md  planning-muc-omemo.md
docs/specs/: xep-0045.txt  xep-0066.txt  xep-0231.txt  xep-0300.txt  xep-0363.txt  xep-0384-legacy-axolotl-0.3.0.txt  xep-0385.txt  xep-0437.txt  xep-0446.txt  xep-0447.txt  xep-0448.txt  xep-0449.txt  xep-0454.txt  xep-0514.txt
legacy/: README  clean.mk  install.mk  makefile.full  test.mk
libstrophe-0.13.0/: Makefile.in  aclocal.m4  configure
libstrophe-0.13.0/debian/: changelog  control  copyright  gbp.conf  libstrophe-dev.docs  libstrophe-dev.examples  libstrophe0.symbols  not-installed  rules  watch
packaging/: README.md  build-packages.sh  distrobox-build.sh  github-build.sh
packaging/arch/: PKGBUILD
packaging/arch/git/: PKGBUILD
packaging/arch/stable/: PKGBUILD
packaging/debian/: changelog  control  copyright  install  rules
packaging/freebsd/: Makefile  README.md  pkg-plist
packaging/openbsd/: Makefile  README.md
packaging/openbsd/pkg/: DESCR  PLIST
packaging/rpm/: weechat-xmpp.spec
packaging/scripts/: build-alpine-inside.sh  build-arch-inside.sh  build-deb-inside.sh  build-freebsd-inside.sh  build-openbsd-inside.sh  build-rpm-inside.sh  build-void-inside.sh  ci-helpers.sh  docker-arch-wrapper.sh  install-build-deps.sh  prepare-source-tree.sh
scripts/: README.md  feed_compose.py  icat.py
sexp/: driver.cpp
src/: account.cpp  account.hh  account_omemo_muc.cpp  avatar.cpp  avatar.hh  buffer.cpp  buffer.hh  channel.cpp  channel.hh  color.cpp  color.hh  command.cpp  command.hh  completion.cpp  config.cpp  config.hh  connection.cpp  connection.hh  debug.hh  input.cpp  message.cpp  message.hh  message_emoji_shortcodes.inl  nicklist.cpp  nicklist.hh  omemo.cpp  omemo.hh  pgp.cpp  pgp.hh  plugin.cpp  plugin.hh  signal.hh  strophe.hh  user.cpp  user.hh  util.cpp  util.hh  version.cpp  version.hh
src/account/: callbacks.cpp  callbacks.inl  lmdb_cache.cpp  lmdb_cache.inl  server_capabilities.cpp
src/command/: account.cpp  account.inl  archive.cpp  archive.inl  channel.cpp  channel.inl  encryption.cpp  encryption.inl  ephemeral.cpp  ephemeral.inl  history.cpp  history.inl  links.cpp  links.inl  messaging.cpp  messaging.inl  muc_admin.cpp  muc_admin.inl  notify.cpp  notify.inl  presence.cpp  presence.inl  rooms.cpp  rooms.inl  roster.cpp  roster.inl
src/config/: account.cpp  account.hh  breadcrumb.cpp  breadcrumb.hh  file.cpp  file.hh  option.cpp  option.hh  section.cpp  section.hh
src/connection/: connect_lifecycle.inl  helpers.cpp  internal.hh  iq_avatar_handler.cpp  iq_avatar_handler.inl  iq_bob_handler.cpp  iq_bob_handler.inl  iq_disco_handler.cpp  iq_disco_handler.inl  iq_handler.cpp  iq_handler.inl  iq_mam_handler.cpp  iq_mam_handler.inl  iq_omemo_pubsub_handler.cpp  iq_omemo_pubsub_handler.inl  iq_ping_handler.cpp  iq_ping_handler.inl  iq_pubsub_feed_handler.cpp  iq_pubsub_feed_handler.inl  iq_upload_handler.cpp  iq_upload_handler.inl  iq_vcard_handler.cpp  iq_vcard_handler.inl  message_handler.cpp  message_handler.inl  optional_server_probes.inl  pep_handler.cpp  pep_handler.inl  post_sm_connect.inl  presence_handler.cpp  presence_handler.inl  session_lifecycle.cpp  stream_features_sniff.cpp  stream_management.inl  strophe_sm_support.hh  strophe_stream_features.hh
src/omemo/: api.cpp  codec.inl  commands.inl  internal_crypto.inl  internal_prelude.inl  internal_signal_store.inl  internal_stanza_parse.inl  lifecycle.inl  session_flow.inl
src/ui/: picker.cpp  picker.hh
src/weechat/: buffer_port.cpp  buffer_port.hh  connection_port.cpp  connection_port.hh  icat_preview.cpp  icat_preview.hh  line_store.cpp  line_store.hh  render_event.cpp  render_event.hh  runtime_port.cpp  runtime_port.hh  ui_port.cpp  ui_port.hh
src/xmpp/: atom.cpp  atom.hh  chat_state.cpp  chat_state.hh  data_form.cpp  data_form.hh  embed.cpp  embed.hh  iq.cpp  iq_bookmarks.cpp  iq_bookmarks.hh  iq_caps.cpp  iq_caps.hh  iq_disco.cpp  iq_disco.hh  iq_error.cpp  iq_error.hh  iq_handlers.cpp  iq_handlers.hh  iq_mam.cpp  iq_mam.hh  iq_omemo_pubsub.cpp  iq_omemo_pubsub.hh  iq_ping.cpp  iq_ping.hh  iq_pubsub_feed.cpp  iq_pubsub_feed.hh  iq_upload.cpp  iq_upload.hh  iq_vcard.cpp  iq_vcard.hh  message_ack.cpp  message_ack.hh  message_aesgcm.cpp  message_aesgcm.hh  message_bob.cpp  message_bob.hh  message_body.cpp  message_body.hh  message_correct.cpp  (+82 more)
tests/: account.inl  config.inl  main.cc  omemo_mechanics.inl  omemo_xep.inl  plugin.inl  timeout_listener.hh  unit.inl  weechat_stub.hh
tools/: CMakeLists.txt  Makefile  correlate_omemo_xml.sh  dump_mam_db  dump_mam_db.cpp  dump_omemo_db.cpp  generate_emoji_shortcodes.py
weechat-4.8.2/debian-stable/: changelog  rules
weechat-4.8.2/tests/fuzz/core/: utf8-fuzzer.cc
xmpp/: node.hh  xep-0191.inl  xep-0249.inl  xep-0352.inl
